--- a/server/public/style.css
+++ b/server/public/style.css
@@ -35,6 +35,11 @@ body {
     left: 0;
     border-radius: 5%;
 }
+
+.entranceButtons > div >button {
+    width: 150px;
+}
+
 @media screen and (max-width: 500px) {
     .navbar-brand {
         margin-right: 6rem;
