--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0 0 0 0;
     font-family: 'Courier New', Courier, monospace;
+    height: 100%;
 }
   
 * {
@@ -12,7 +13,7 @@ body {
 .homePage {
     background-color:#F5F2F2;
     width: 100%;
-    height: 726px;
+    height: 100vh;
     align-content: center;
     text-align: center;
 }
@@ -68,7 +69,7 @@ form {
 
 @media screen and (max-width: 500px) {
     .navbar-brand {
-        margin-right: 5rem;
+        margin-right: 4rem;
     }
 }
 
@@ -76,7 +77,7 @@ form {
     .homePage {
       background-color:#F5F2F2;
       width: 100%;
-      height: 726px;
+      height: 700px;
       align-content: center;
       text-align: center;
     }
